<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_current_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/current_passwd"
        android:inputType="textPassword"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_new_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/new_passwd"
        android:inputType="textPassword"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_repeat_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/repeat_passwd"
        android:inputType="textPassword"
        tools:ignore="Autofill,TextFields" />

</LinearLayout>